--- a/package.json
+++ b/package.json
@@ -11,16 +11,17 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/native": "^6.1.9",
+    "@shopify/flash-list": "1.4.3",
     "expo": "~49.0.15",
+    "expo-dev-client": "~2.4.12",
     "expo-location": "~16.1.0",
     "expo-status-bar": "~1.6.0",
     "moment": "^2.29.4",
     "react": "18.2.0",
     "react-native": "0.72.6",
+    "react-native-linear-gradient": "^2.8.3",
     "react-native-safe-area-context": "4.6.3",
-    "react-native-screens": "~3.22.0",
-    "@shopify/flash-list": "1.4.3",
-    "expo-dev-client": "~2.4.12"
+    "react-native-screens": "~3.22.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
